Frontend/mobile-app/PropertyManager/src/global.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

/*
 * App Global CSS
 * ----------------------------------------------------------------------------
 * Put style rules here that you want to apply globally. These styles are for
 * the entire app and not just one component. Additionally, this file can be
 * used as an entry point to import other CSS/Sass files to be included in the
 * output CSS.
 * For more information on global stylesheets, visit the documentation:
 * https://ionicframework.com/docs/layout/global-stylesheets
 */

/* Core CSS required for Ionic components to work properly */
@import "@ionic/angular/css/core.css";

/* Basic CSS for apps built with Ionic */
@import "@ionic/angular/css/normalize.css";
@import "@ionic/angular/css/structure.css";
@import "@ionic/angular/css/typography.css";
@import "@ionic/angular/css/display.css";

/* Optional CSS utils that can be commented out */
@import "@ionic/angular/css/padding.css";
@import "@ionic/angular/css/float-elements.css";
@import "@ionic/angular/css/text-alignment.css";
@import "@ionic/angular/css/text-transformation.css";
@import "@ionic/angular/css/flex-utils.css";

/**
 * Ionic Dark Mode
 * -----------------------------------------------------
 * For more info, please see:
 * https://ionicframework.com/docs/theming/dark-mode
 */

/* @import "@ionic/angular/css/palettes/dark.always.css"; */
/* @import "@ionic/angular/css/palettes/dark.class.css"; */
@import '@ionic/angular/css/palettes/dark.system.css';

:root {
  --property-yellow: #FFE372;
}

.propertyYellow-bg {
  background-color: var(--property-yellow);
}
ion-content {
  --padding-bottom: 80px; 
  height: 100%;
}

app-tab {
  position: fixed;
  bottom: 0;
  width: 100%;
  z-index: 100;
  height: 60px; 
}

/* Add to styles.scss or your global stylesheet */
.light-theme {
  --background: #fff;
  --text-color: #222;
}
.dark-theme {
  --background: #222;
  --text-color: #fff;
}
.font-normal {
  font-size: 1rem;
}
.font-large {
  font-size: 1.25rem;
}
.font-small {
  font-size: 0.85rem;
}
body, ion-content {
  background: var(--background);
  color: var(--text-color);
}

